fix overflow problem of vertical scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ body {
   line-height: 1.6;
   background: #fff;
   color: var(--color-text-dark);
+  overflow-x: hidden;
 }
 
 /* Header */
